# omnigrab

./: .gitignore  README.md  omnigrab.code-workspace  package-lock.json  package.json  pyrightconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: android.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  desktop.yml  landing.yml  linux.yml  macos.yml  windows.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/types/: route_meta_data.json
landing/: index.html
scripts/: aab-to-apk.sh  build-android-ui.sh  create-icons.js  create-keystore.sh  dev-android.mjs  download-binaries.js  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: download.rs  info.rs  mod.rs  system.rs
src-tauri/tauri-plugin-omnigrab-ytdl/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-omnigrab-ytdl/android/src/main/java/: Example.kt  ExamplePlugin.kt
src-tauri/tauri-plugin-omnigrab-ytdl/android/src/main/java/com/plugin/omnigrab_ytdl/: OmnigrabYtdlPlugin.kt
src-tauri/tauri-plugin-omnigrab-ytdl/android/src/test/java/: ExampleUnitTest.kt
src-tauri/tauri-plugin-omnigrab-ytdl/examples/tauri-app/src/: App.svelte
src-tauri/tauri-plugin-omnigrab-ytdl/examples/tauri-app/src-tauri/: Cargo.toml
src-tauri/tauri-plugin-omnigrab-ytdl/examples/tauri-app/src-tauri/src/: lib.rs
src-tauri/tauri-plugin-omnigrab-ytdl/guest-js/: index.ts
src-tauri/tauri-plugin-omnigrab-ytdl/src/: lib.rs  models.rs
(+64 files in other folders)
