[package]
name = "omnigrab"
version = "1.3.6"
description = "OmniGrab - Universal Video & Audio Downloader"
authors = ["OmniGrab Contributors"]
edition = "2021"

[lib]
name = "omnigrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-omnigrab-ytdl = { path = "./tauri-plugin-omnigrab-ytdl" }
